--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
-
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+/*Icons */
+.icon {
+  padding: 20px;
+  text-decoration: none;
+}
+.linkedin{
+  background-image: url('./assets/LI-In-Bug.png');
+  background-repeat: no-repeat;
+  width: 50px;
+  height: 50px;
+  background-size: contain;
+}
+
+.github{
+  background-image: url('./assets/GitHub-Mark-Light-120px-plus.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 50px;
+  height: 50px;
+}
