(feat) Add form to init the game

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <main>
-  <app-game-form></app-game-form>
+  <section class="container">
+    <h1 class="tittle">MineSweeper</h1>
+    <app-game-form></app-game-form>
+  </section>
   <app-footer></app-footer>
 </main>
