--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,3 +4,8 @@ main{
   height: 100%;
   justify-content: space-between;
 }
+.tittle{
+  font-weight: bold;
+  text-align: center;
+  margin: 20px 0;
+}
