--- a/src/app/components/minesweeper/game/game.component.css
+++ b/src/app/components/minesweeper/game/game.component.css
@@ -6,6 +6,7 @@
   font-weight: bold;
   text-align: center;
   justify-content: center;
+  cursor:pointer;
 }
 
 .clean{
@@ -23,6 +24,27 @@
   font-size: 1.2vw;
   font-weight: bold;
   padding-top: 0.2vw;
+}
+
+.flag{
+  width: 100%;
+  height: 75%;
+  margin-top: 2px;
+  flex-wrap: wrap;
+  display: flex;
+}
+.flag div{
+  width: 33.33%;
+  height: 33.33%;
+  margin: 0;
+  padding: 0;
+}
+.flag div:nth-child(3n-2),
+.flag div:nth-child(3n){
+  width: 30%;
+}
+.flag div:nth-child(3n-1){
+  width: 40%;
 }
 
 .number-1{ color: #0000ff }
