(feat) add close amount calculation

--- a/src/app/components/minesweeper/game/game.component.html
+++ b/src/app/components/minesweeper/game/game.component.html
@@ -8,9 +8,9 @@
       <div class="border-frame"></div>
     </div>
   </div>
-  <div *ngFor="let row of game.boxs" class="row-game">
+  <div *ngFor="let row of game.boxs; let i = index" class="row-game">
     <div class="frame frame-left"></div>
-    <div *ngFor="let cell of row" [class]="cell.getStyle()"
+    <div *ngFor="let cell of row; let j = index" [class]="cell.getStyle(cell)"
     (click)="click(cell)" (contextmenu)="rightClick(cell)">
       <div *ngIf="cell.hasFlag()" class="flag">
         <div style="border-right: 2px solid black;"></div>
@@ -22,6 +22,9 @@
         <div style="border-right: 2px solid black;"></div>
         <div></div>
         <div></div>
+      </div>
+      <div *ngIf="cell.isTouched()">
+        {{cell.getCloseAmount()}}
       </div>
     </div>
     <div class="frame frame-right"></div>
